map colors to stitch references

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "Image",
     "ipairs",
     "Point",
-    "Rectangle"
+    "Rectangle",
+    "Color"
   ],
   "Lua.runtime.version": "Lua 5.3"
 }
